[package]
name = "emmapack"
version = "0.0.3"
edition = "2021"
authors = [""]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/lukas0008/emmapack"
description = "Traits for sending and receiving packets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
bincode = "1.3.3"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["io-util"], default-features = false, optional = true }
